# byacc-cmake

./: .gitignore  CMakeLists.txt
src/: defs.h  main.c
